# tinykw

./: .gitignore  LICENSE  README.md
.github/workflows/: github-actions.yml
examples/C/: Makefile  README.md  microphone_portaudio.c
examples/python/: README.md  microphone_pyaudio.py  requirements.txt
include/: tinykw.h
libs/cortex-m4/: tinykw.h
libs/linux-arm64/: tinykw.h
libs/macos-arm64/de/: libtinykw.dylib
libs/macos-arm64/en/: libtinykw.dylib
libs/macos-arm64/es/: libtinykw.dylib
libs/macos-arm64/fr/: libtinykw.dylib
libs/macos-arm64/it/: libtinykw.dylib
libs/macos-arm64/ja/: libtinykw.dylib
libs/macos-arm64/pt/: libtinykw.dylib
libs/macos-arm64/zh/: libtinykw.dylib
libs/macos-x86_64/de/: libtinykw.dylib
libs/macos-x86_64/en/: libtinykw.dylib
libs/macos-x86_64/es/: libtinykw.dylib
libs/macos-x86_64/fr/: libtinykw.dylib
libs/macos-x86_64/it/: libtinykw.dylib
libs/macos-x86_64/ja/: libtinykw.dylib
libs/macos-x86_64/pt/: libtinykw.dylib
libs/macos-x86_64/zh/: libtinykw.dylib
python-binding/: README.md  pyproject.toml  setup.py
python-binding/src/tinykw/: __init__.py  wrapper.py
python-binding/tests/: test_tinykw.py
